--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,25 @@
 
 # OS files
 .DS_Store
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Keys and certificates
+*.crt
+*.key
+*.hcl
