[#19] Add functionality for: - handle commands and configs - use pubsub as internal message - updating db for device configs
Signed-off-by: Georgios Dimitropoulos <g.dimitropoulos@sotec.eu>

--- a/device-communication/src/main/docker/Dockerfile.legacy-jar
+++ b/device-communication/src/main/docker/Dockerfile.legacy-jar
@@ -81,6 +81,7 @@ ENV LANGUAGE='en_US:en'
 
 RUN mkdir api/
 RUN mkdir db/
+RUN mkdir creds/
 
 COPY target/classes/api/* /api/
 COPY target/classes/db/* /db/
