--- a/device-communication/src/main/resources/api/hono-device-communication-v1.yaml
+++ b/device-communication/src/main/resources/api/hono-device-communication-v1.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
   description: Device commands and configs API.
 servers:
-  - url: http://localhost:8080/api/v1
+  - url: http://localhost:8080/v1
 
 paths:
   /commands/{tenantid}/{deviceid}:
@@ -30,6 +30,8 @@ paths:
           description: Device not found
         "500":
           description: Internal server error
+        "504":
+          description: Device not available
       operationId: postCommand
       summary: Send a command to device.
     parameters:
@@ -122,6 +124,51 @@ paths:
           type: string
         in: path
         required: true
+  /states/{tenantid}/{deviceid}:
+    summary: Device states
+    description: List states for a specific device
+    get:
+      tags:
+        - STATES
+      parameters:
+        - name: numStates
+          description: "The number of states to list. States are listed in decreasing
+          order of the state id. The maximum number of states saved in Database is
+          10. If this value is zero, it will return all the states available."
+          schema:
+            type: integer
+            minimum: 0
+            maximum: 10
+          in: query
+          required: false
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListDeviceStatesResponse'
+          description: Lists the device states
+        "404":
+          description: Device not found
+        "500":
+          description: Internal server error
+      operationId: listStates
+      summary: List the device states
+      description: "Lists the last few states of the device in descending
+        order (i.e.: newest first)."
+    parameters:
+      - name: tenantid
+        description: Unique registry id
+        schema:
+          type: string
+        in: path
+        required: true
+      - name: deviceid
+        description: Unique device id
+        schema:
+          type: string
+        in: path
+        required: true
 components:
   schemas:
     DeviceCommandRequest:
@@ -143,6 +190,22 @@ components:
             more than 256 characters, and must not contain any MQTT wildcards 
             (\"+\" or \"#\") or null characters."
           type: string
+        response-required:
+          description: "If set to true, the command will be send with a correlation-id
+            as a request/response command."
+          type: boolean
+        ack-required:
+          description: "If set to true, the command will be send with a correlation-id.
+            The request will wait for the command acknowledgement response.
+            The maximum wait time can be adjusted with the timeout parameter."
+          type: boolean
+        correlation-id:
+          description: "ID used to correlate a response message to the original request."
+          type: integer
+        timeout:
+          description: "Time in milliseconds to wait for an ack-required response message."
+          type: integer
+          default: 10000
       example:
         binaryData: A base64-encoded string
         subfolder: Optional subfolder for the command
@@ -212,4 +275,36 @@ components:
         version: string
         cloudUpdateTime: string
         deviceAckTime: string
+        binaryData: string
+    ListDeviceStatesResponse:
+      title: Root Type for ListDeviceStatesResponse
+      description: A list of a device states
+      type: object
+      properties:
+        deviceStates:
+          description: List of DeviceState objects
+          type: array
+          items:
+            $ref: '#/components/schemas/DeviceState'
+      example:
+        deviceStates:
+          - object: DeviceState
+    DeviceState:
+      title: Root Type for DeviceState
+      description: The device state.
+      type: object
+      properties:
+        updateTime:
+          description: "String (Timestamp format) [Output only] The time at
+            which this state version was updated. This
+            timestamp is set by the server. Timestamp in 
+            RFC3339 UTC \"Zulu\" format, accurate to nanoseconds. 
+            Example: \"2014-10-02T15:01:23.045123456Z\"."
+          type: string
+        binaryData:
+          description: "string (bytes format) The device state data
+            in string base64-encoded format."
+          type: string
+      example:
+        updateTime: string
         binaryData: string
