[#19] Enhance device communication API * added support for device states * added support for request/response commands * added automatic Pub/Sub tenant topic & subscription creation and deletion * added automatically sending of a config in case a config is requested or a new one created * extended config table with error field * formatted device communication api code
Signed-off-by: Matthias Kaemmer <m.kaemmer@sotec.eu>

--- a/device-communication/src/main/resources/application.yaml
+++ b/device-communication/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ app:
     command:
       topicFormat: ${COM_COMMAND_TOPIC_FORMAT:%s.command} # TENANT_NAME.command
       ackTopic: ${COM_CONFIG_ACK_TOPIC:%s.command_response} # TENANT_NAME.command_response
-      configAckDelay: ${COM_CONFIG_ACK_DELAY:10000}
+      commandConfigAckDelay: ${COM_COMMAND_CONFIG_ACK_DELAY:5000}
 
 vertx:
   openapi:
