--- a/device-communication/src/main/resources/application.yaml
+++ b/device-communication/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 app:
   name: "Device Communication"
   version: ${COM_APP_VERSION:"v1"}
-  projectId: ${COM_PROJECT_ID:project-id}
+  projectId: ${QUARKUS_GOOGLE_CLOUD_PROJECT_ID:}
 
   internalMessaging:
     message:
@@ -62,6 +62,6 @@ vertx:
 quarkus:
   container-image:
     builder: docker
-    build: false
-    push: false
-    image: "eclipse/hono-device-communication"
+    build: true
+    push: true
+    image: "gcr.io/sotec-iot-core-dev/hono-device-communication:2.5.1-SNAPSHOT-test"
