--- a/device-communication/pom.xml
+++ b/device-communication/pom.xml
@@ -13,18 +13,19 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>2.15.3.Final</quarkus.platform.version>
+        <quarkus.platform.version>3.2.6.Final</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0-M9</surefire-plugin.version>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <hono.version>2.1.0</hono.version>
-        <vertx-pg-client.version>4.3.7</vertx-pg-client.version>
+        <vertx-pg-client.version>4.4.6</vertx-pg-client.version>
         <jakarta.persistence-api.version>2.2.3</jakarta.persistence-api.version>
         <com.ongres.scram.client.version>2.1</com.ongres.scram.client.version>
-        <quarkus-container-image-docker.version>2.16.0.Final</quarkus-container-image-docker.version>
-        <quarkus-google-cloud-pubsub.version>1.3.0</quarkus-google-cloud-pubsub.version>
+        <quarkus-container-image-docker.version>3.2.6.Final</quarkus-container-image-docker.version>
+        <quarkus-google-cloud-pubsub.version>2.6.0</quarkus-google-cloud-pubsub.version>
         <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
         <com.google.guava.version>31.1-jre</com.google.guava.version>
+        <mockito-inline.version>5.2.0</mockito-inline.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -84,6 +85,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
+            <version>${mockito-inline.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -96,6 +98,14 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>${jakarta.persistence-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.ongres.scram</groupId>
